# eduPhys

./: .gitignore  .tags  .tags_sorted_by_file  CMakeCache.txt  CMakeLists.txt  Makefile  README  \  application.cpp  application.h  application.moc  box.cpp  box.h  camera.cpp  camera.h  cmake_install.cmake  collision.cpp  collision.h  core.cpp  core.h  debug_draw.cpp  debug_draw.h  dfds  dump  eduPhys.sublime-project  eduPhys.sublime-workspace  edu_phys.sublime-workspace  geometry.cpp  geometry.h  gprof_graph.txt  gpuhelper.cpp  gpuhelper.h  main.cpp  my_utils.cpp  my_utils.h  obj_mover.cpp  obj_mover.h  out.txt  phys_ent.cpp  phys_ent.h  (+13 more)
serialization/: CMakeLists.txt  phys_ent.pb.cc  phys_ent.pb.cpp  phys_ent.pb.h  phys_ent.proto
src/: CMakeLists.txt  camera.h  collision.cpp  core.cpp  core.h  dump  eduPhys.srctrlprj  gpuhelper.h  icosphere.cpp  main.cpp  my_eulerAngles.h  my_utils.h  phys_ent.cpp  run.sh  sphere.cpp
src/serialization/: CMakeLists.txt  create_msgs.sh  phys_ent.pb.cc  phys_ent.pb.h
